@@ -299,6 +299,9 @@ feature invariant-checks : on off full : composite propagated link-incompatible 
 feature.compose <invariant-checks>off : <define>TORRENT_DISABLE_INVARIANT_CHECKS ;
 feature.compose <invariant-checks>full : <define>TORRENT_EXPENSIVE_INVARIANT_CHECKS ;
 
+feature request-log : off on : composite propagated link-incompatible ;
+feature.compose <request-log>on : <define>TORRENT_REQUEST_LOGGING ;
+
 feature disk-stats : off on : composite propagated link-incompatible ;
 feature.compose <disk-stats>on : <define>TORRENT_DISK_STATS ;
 
